Доработки CompilationServiceImpl